openshift/deploymentconfig.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: ${APPLICATION_NAME}
  name: ${APPLICATION_NAME}
spec:
  replicas: 1
  selector:
    app: ${APPLICATION_NAME}
    deploymentconfig: ${APPLICATION_NAME}
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        app: ${APPLICATION_NAME}
        deploymentconfig: ${APPLICATION_NAME}
    spec:
      automountServiceAccountToken: false
      containers:
      - command:
        - start-notebook.sh
        - --config=/etc/jupyter/openshift/jupyter_notebook_config.py
        - --no-browser
        - --ip=0.0.0.0
        image: ${IMAGE}
        name: jupyter-notebook
        ports:
        - containerPort: 8888
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/jupyter/openshift
          name: configs
      hostAliases:
      - hostnames:
        - jump1
        ip: "10.241.64.4"
      securityContext:
        supplementalGroups:
        - 100
      volumes:
      - configMap:
          name: ${APPLICATION_NAME}-cfg
        name: configs
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - jupyter-notebook
      from:
        kind: ImageStreamTag
        name: madi-pipeline-notebook:latest
    type: ImageChange
