openshift/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${APPLICATION_NAME}
  name: ${APPLICATION_NAME}
spec:
  ports:
  - name: 8888-tcp
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: ${APPLICATION_NAME}
    deploymentconfig: ${APPLICATION_NAME}
  type: ClusterIP
